@@ -4,19 +4,19 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
-import org.jsoup.nodes.Element;
 import org.jsoup.select.Elements;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import study.withkbo.team.dto.TeamInfoResponse;
+import study.withkbo.exception.common.CommonError;
+import study.withkbo.exception.common.CommonException;
+import study.withkbo.team.dto.response.TeamInfoResponseDto;
 import study.withkbo.team.entity.Team;
 import study.withkbo.team.repository.TeamRepository;
 
 import java.io.IOException;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,7 +27,7 @@ public class TeamService {
 
     @Transactional
     @Scheduled(cron = "0 0 2 * * *")
-    public List<TeamInfoResponse> selectTeamInfo() {
+    public List<TeamInfoResponseDto> selectTeamInfo() {
         Elements baseballTeams = crawlingTeamInfo();
         List<String> teamNames = extractTeamName(baseballTeams);
         List<Team> existTeams = findByTeamName(teamNames);
@@ -42,51 +42,61 @@ public class TeamService {
 
     private List<String> extractTeamName(Elements baseballTeams) {
         return baseballTeams.stream()
-                .map(baseballTeam -> new Team().crawledToEntity(baseballTeam).getTeamName())
-                .collect(Collectors.toList());
+                .map(baseballTeam -> new Team().crawledToTeamEntity(baseballTeam).getTeamName())
+                .toList();
     }
 
     private void processTeam(Team newTeam, List<Team> existTeams) {
-        Optional<Team> teamInDB = existTeams.stream()
+        existTeams.stream()
                 .filter(existing -> existing.getTeamName().equals(newTeam.getTeamName()))
-                .findFirst();
-
-        if (teamInDB.isPresent()) {
-            Team existTeam = teamInDB.get();
-            existTeam.updateTeam(newTeam);
-        } else {
-            existTeams.add(newTeam);
-        }
+                .findFirst()
+                .ifPresentOrElse(
+                        existingTeam -> existingTeam.updateTeam(newTeam),
+                        () -> existTeams.add(newTeam)
+                );
     }
 
-    public Elements crawlingTeamInfo(){
+    public Elements crawlingTeamInfo() {
+        Document doc;
         try {
-            Document doc = Jsoup.connect("https://sports.news.naver.com/kbaseball/record/index.nhn?category=kbo")
+            doc = Jsoup.connect("https://sports.news.naver.com/kbaseball/record/index.nhn?category=kbo")
                     .userAgent("Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.86 Safari/537.36")
                     .get();
-            
-            Elements baseballTeams = doc.select("#regularTeamRecordList_table > tr");
-            
-            if(!baseballTeams.isEmpty()){
-                return baseballTeams;
-            }
-            
         } catch (IOException e) {
-            throw new RuntimeException(e);
+            throw new CommonException(CommonError.CRAWLING_ERROR, CommonError.CRAWLING_ERROR.getMessage());
         }
-        return new Elements();
+
+        Elements baseballTeams = doc.select("#regularTeamRecordList_table > tr");
+
+        if (baseballTeams.isEmpty()) {
+            throw new CommonException(CommonError.NO_TEAM_INFO, CommonError.NO_TEAM_INFO.getMessage());
+        }
+
+        return baseballTeams;
     }
 
     private void teamGroupToEntity(Elements baseballTeams, List<Team> existTeams) {
-        for (Element baseballTeam : baseballTeams) {
-            Team newTeam = new Team().crawledToEntity(baseballTeam);
+        baseballTeams.forEach(baseballTeam -> {
+            Team newTeam = new Team().crawledToTeamEntity(baseballTeam);
             processTeam(newTeam, existTeams);
-        }
-        teamRepository.saveAll(existTeams);
+        });
+
+        saveTeams(existTeams);
     }
 
-    public List<TeamInfoResponse> teamToDto(List<Team> existTeams) {
-        return existTeams.stream().map(team -> TeamInfoResponse.builder()
+    private void saveTeams(List<Team> existTeams) {
+        Optional.ofNullable(existTeams)
+                .filter(teams -> !teams.isEmpty())
+                .ifPresentOrElse(
+                        teamRepository::saveAll,
+                        () -> {
+                            throw new CommonException(CommonError.INTERNAL_SERVER_ERROR, CommonError.INTERNAL_SERVER_ERROR.getMessage());
+                        }
+                );
+    }
+
+    public List<TeamInfoResponseDto> teamToDto(List<Team> existTeams) {
+        return existTeams.stream().map(team -> TeamInfoResponseDto.builder()
                         .teamId(team.getId())
                         .ranking(team.getRanking())
                         .teamName(team.getTeamName())
@@ -97,8 +107,10 @@ public class TeamService {
                         .winRate(team.getWinRate())
                         .consecutive(team.getConsecutive())
                         .last10Games(team.getLast10Games())
+                        .stadium(team.getStadium())
+                        .latitude(team.getLatitude())
+                        .longitude(team.getLongitude())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
-
 }
